force-app/main/default/objects/Field_Meta_Data__c/Field_Meta_Data__c.object-meta.xml
<CustomObject>
    <description>Contains UI information for each field</description>
    <label>Field Meta Data</label>
    <nameField>
        <label>Field Meta Data Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Field Meta Data</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>