force-app/main/default/objects/Field_Meta_Data__c/fields/Application_Cache_ID__c.field-meta.xml
<CustomField>
    <fullName>Application_Cache_ID__c</fullName>
    <formula>Card_Meta_Data__r.Application_Meta_Data__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Application Cache ID</label>
    <type>Text</type>
</CustomField>