force-app/main/default/objects/Field_Meta_Data__c/fields/Card_Dependend_Value__c.field-meta.xml
<CustomField>
    <fullName>Card_Dependend_Value__c</fullName>
    <inlineHelpText>If the Field = Card Dependent Value, the Dependent Cards criteria will be triggered</inlineHelpText>
    <label>Card Dependent Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>