force-app/main/default/objects/Field_Meta_Data__c/fields/Card_Dependent_Action__c.field-meta.xml
<CustomField>
    <fullName>Card_Dependent_Action__c</fullName>
    <label>Card Dependent Action</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>hide</fullName>
            </value>
            <value>
                <fullName>show</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>