force-app/main/default/objects/Field_Meta_Data__c/fields/Card_Meta_Data__c.field-meta.xml
<CustomField>
    <fullName>Card_Meta_Data__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Link Field to its card</description>
    <label>Card Meta Data</label>
    <referenceTo>Card_Meta_Data__c</referenceTo>
    <relationshipLabel>Field Meta Data</relationshipLabel>
    <relationshipName>Field_Meta_Data1</relationshipName>
    <type>Lookup</type>
</CustomField>