force-app/main/default/objects/Field_Meta_Data__c/fields/Client_Email_Response_Field__c.field-meta.xml
<CustomField>
    <fullName>Client_Email_Response_Field__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If this field is checked, an email response will be send to this address</description>
    <inlineHelpText>If this field is checked, an email response will be send to this address</inlineHelpText>
    <label>Client Email Response Field</label>
    <type>Checkbox</type>
</CustomField>