force-app/main/default/objects/Field_Meta_Data__c/fields/Default_value_field__c.field-meta.xml
<CustomField>
    <fullName>Default_value_field__c</fullName>
    <description>Used for default field value prepopulate</description>
    <inlineHelpText>Used for pre populate user info to Lodging Card Info</inlineHelpText>
    <label>Default value field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>