force-app/main/default/objects/Field_Meta_Data__c/fields/DependAction__c.field-meta.xml
<CustomField>
    <fullName>DependAction__c</fullName>
    <inlineHelpText>This specifies what is to be done to the dependend target control</inlineHelpText>
    <label>Depent Action</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>show</fullName>
            </value>
            <value>
                <fullName>hide</fullName>
            </value>
            <value>
                <fullName>set value</fullName>
            </value>
            <value>
                <fullName>show and set value</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>