force-app/main/default/objects/Field_Meta_Data__c/fields/DependendCards__c.field-meta.xml
<CustomField>
    <fullName>DependendCards__c</fullName>
    <inlineHelpText>The cards that will be affected if the Field Value = Depend Card Value. To be entered in the format: Card Name1=on,Card name2=off...</inlineHelpText>
    <label>Dependent Cards</label>
    <type>TextArea</type>
</CustomField>