force-app/main/default/objects/Field_Meta_Data__c/fields/Dependent_Value_to_be_set__c.field-meta.xml
<CustomField>
    <fullName>Dependent_Value_to_be_set__c</fullName>
    <inlineHelpText>This is the value that will be set on the dependent target control</inlineHelpText>
    <label>Dependent Value to be set</label>
    <length>255</length>
    <type>Text</type>
</CustomField>