force-app/main/default/objects/Field_Meta_Data__c/fields/DependField__c.field-meta.xml
<CustomField>
    <fullName>DependField__c</fullName>
    <inlineHelpText>The depended  target field to be affected when the depended value is matched</inlineHelpText>
    <label>Depent Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>