force-app/main/default/objects/Field_Meta_Data__c/fields/DependValue__c.field-meta.xml
<CustomField>
    <fullName>DependValue__c</fullName>
    <inlineHelpText>This is the value that need to match this field value to trigger the depended action. If it should be NOT the specified value, us an ! mark. for example: !NSW</inlineHelpText>
    <label>Depent Value</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>