force-app/main/default/objects/Field_Meta_Data__c/fields/FieldMetaID__c.field-meta.xml
<CustomField>
    <fullName>FieldMetaID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Used for export purpose</description>
    <externalId>true</externalId>
    <inlineHelpText>Used for export purpose</inlineHelpText>
    <label>FieldMetaID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>