force-app/main/default/objects/Field_Meta_Data__c/fields/File_Upload_Holder_Object_Input_Table__c.field-meta.xml
<CustomField>
    <fullName>File_Upload_Holder_Object_Input_Table__c</fullName>
    <description>This is the custom object that will sit between the Line Record (for example Expense Item) and the actual attachment. For example the Victim Service Document object will have the attachments and its parent will be the expense Item.</description>
    <inlineHelpText>This is the custom object that will sit between the Line Record (for example Expense Item) and the actual attachment. For example the Victim Service Document object will have the attachments and its parent will be the expense Item.</inlineHelpText>
    <label>Input Table File Upload Holder Object</label>
    <length>255</length>
    <type>Text</type>
</CustomField>