force-app/main/default/objects/Field_Meta_Data__c/fields/Inline_Label__c.field-meta.xml
<CustomField>
    <fullName>Inline_Label__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Styling: Inline Label</label>
    <type>Checkbox</type>
</CustomField>