force-app/main/default/objects/Field_Meta_Data__c/fields/input_table_cols__c.field-meta.xml
<CustomField>
    <fullName>input_table_cols__c</fullName>
    <description>Specify the column labels for an InputTable in comma delimited format</description>
    <inlineHelpText>Specify the column labels for an InputTable in comma delimited format</inlineHelpText>
    <label>Columns for Input Table</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>