force-app/main/default/objects/Field_Meta_Data__c/fields/input_table_field_types__c.field-meta.xml
<CustomField>
    <fullName>input_table_field_types__c</fullName>
    <description>Specify the field types for an InputTable in comma delimited format. Example: text,picklist:opt1;opt2,checkbox
For file attachments add the field type fileupload in the last position. For example: text,picklist:opt1;opt2,checkbox,fileupload</description>
    <inlineHelpText>Specify the field types for an InputTable in comma delimited format. Example: text,picklist:opt1;opt2,checkbox
For file attachments add the field type fileupload in the last position. For example: text,picklist:opt1;opt2,checkbox,fileupload. 1 / row only</inlineHelpText>
    <label>Field Types for Input Table</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>