force-app/main/default/objects/Field_Meta_Data__c/fields/ObjectField__c.field-meta.xml
<CustomField>
    <fullName>ObjectField__c</fullName>
    <inlineHelpText>The Target field on the Target Object to populate with the value from this field</inlineHelpText>
    <label>Target Object Field</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>