force-app/main/default/objects/Field_Meta_Data__c/fields/Parent_Object_Field_for_Input_Table__c.field-meta.xml
<CustomField>
    <fullName>Parent_Object_Field_for_Input_Table__c</fullName>
    <description>This field will have the Field for the Parent to the related children object in the Multi Input Table as well as for File uploads</description>
    <inlineHelpText>This field will have the Field for the Parent to the related children object in the Multi Input Table as well as for File uploads</inlineHelpText>
    <label>Parent Object Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>