force-app/main/default/objects/Field_Meta_Data__c/fields/PDF_Reference_Id__c.field-meta.xml
<CustomField>
    <fullName>PDF_Reference_Id__c</fullName>
    <description>Ids used on Application Summary PDF page.
This will be copied on to Document Checklist of Application</description>
    <inlineHelpText>Ids used on Application Summary PDF page.
This will be copied on to Document Checklist of Application</inlineHelpText>
    <label>PDF Reference Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>