force-app/main/default/objects/Field_Meta_Data__c/fields/PicklistValues__c.field-meta.xml
<CustomField>
    <fullName>PicklistValues__c</fullName>
    <description>This will contain the actual picklist values from Salesforce. To use the Salesforce picklist values in this field, check the Use Salesforce Picklist Values from SF. This field is auto-populated on save</description>
    <inlineHelpText>This will contain the actual picklist values from Salesforce. To use the Salesforce picklist values in this field, check the Use Salesforce Picklist Values from SF. This field is auto-populated on save</inlineHelpText>
    <label>PicklistValues</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>