force-app/main/default/objects/Field_Meta_Data__c/fields/Quality_Check__c.field-meta.xml
<CustomField>
    <fullName>Quality_Check__c</fullName>
    <label>Quality Check</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>