force-app/main/default/objects/Field_Meta_Data__c/fields/Target_Fields_For_Input_Table__c.field-meta.xml
<CustomField>
    <fullName>Target_Fields_For_Input_Table__c</fullName>
    <description>The corresponding Target field for each input table field. Note: the target object must point to the object containing these fields.</description>
    <inlineHelpText>The corresponding Target field for each input table field. Note: the target object must point to the object containing these fields.</inlineHelpText>
    <label>Target Fields For Input Table</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>