force-app/main/default/objects/Field_Meta_Data__c/fields/Target_Object_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Target_Object_Record_Type__c</fullName>
    <description>The DeveloperName of the record type of the object that this field will submit to.</description>
    <inlineHelpText>The DeveloperName of the record type of the object that this field will submit to.</inlineHelpText>
    <label>Target Object Record Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>