force-app/main/default/objects/Field_Meta_Data__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>text</fullName>
                <default>true</default>
                <label>text</label>
            </value>
            <value>
                <fullName>checkbox</fullName>
            </value>
            <value>
                <fullName>date</fullName>
            </value>
            <value>
                <fullName>textarea</fullName>
            </value>
            <value>
                <fullName>picklist</fullName>
            </value>
            <value>
                <fullName>datetime</fullName>
            </value>
            <value>
                <fullName>info</fullName>
            </value>
            <value>
                <fullName>rich text</fullName>
            </value>
            <value>
                <fullName>inputtable</fullName>
            </value>
            <value>
                <fullName>radio</fullName>
            </value>
            <value>
                <fullName>multicheckbox</fullName>
            </value>
            <value>
                <fullName>decimal</fullName>
            </value>
            <value>
                <fullName>multiPicklist</fullName>
            </value>
            <value>
                <fullName>file</fullName>
            </value>
            <value>
                <fullName>table</fullName>
            </value>
            <value>
                <fullName>clm-file</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>