force-app/main/default/objects/Field_Meta_Data__c/fields/Use_Picklist_Values_From_SF__c.field-meta.xml
<CustomField>
    <fullName>Use_Picklist_Values_From_SF__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The picklist will contain the actual values from the picklist in SF if this is checked.</description>
    <inlineHelpText>The picklist will contain the actual values from the picklist in SF if this is checked.</inlineHelpText>
    <label>Use Picklist Values From SF</label>
    <type>Checkbox</type>
</CustomField>