force-app/main/default/objects/Field_Meta_Data__c/fields/Validation_ABN_Number__c.field-meta.xml
<CustomField>
    <fullName>Validation_ABN_Number__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to validate the number for ABN</description>
    <label>Validation: ABN Number</label>
    <type>Checkbox</type>
</CustomField>