force-app/main/default/objects/Field_Meta_Data__c/fields/Validation_Date__c.field-meta.xml
<CustomField>
    <fullName>Validation_Date__c</fullName>
    <description>Used to validate date</description>
    <label>Validation(Date)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>