force-app/main/default/objects/Field_Meta_Data__c/fields/Validation_Email_Only__c.field-meta.xml
<CustomField>
    <fullName>Validation_Email_Only__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Validation: Email Only</label>
    <type>Checkbox</type>
</CustomField>