force-app/main/default/objects/Field_Meta_Data__c/fields/Validation_Length__c.field-meta.xml
<CustomField>
    <fullName>Validation_Length__c</fullName>
    <label>Validation: Max Length</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>