force-app/main/default/objects/Field_Meta_Data__c/fields/Validation_No_Space__c.field-meta.xml
<CustomField>
    <fullName>Validation_No_Space__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Validation: No Space</label>
    <type>Checkbox</type>
</CustomField>