force-app/main/default/objects/Field_Meta_Data__c/fields/Validation_Numeric_greater_than_zero__c.field-meta.xml
<CustomField>
    <fullName>Validation_Numeric_greater_than_zero__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Validation: Numeric greater than zero</label>
    <type>Checkbox</type>
</CustomField>