force-app/main/default/objects/Field_Meta_Data__c/fields/Validation_Regression__c.field-meta.xml
<CustomField>
    <fullName>Validation_Regression__c</fullName>
    <description>Used to specify the regression to validate if the string is meet the requirement, if it is meet, it will throw an error message</description>
    <label>Validation Regression</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>