force-app/main/default/objects/Field_Meta_Data__c/fields/Validation_Special_Chars__c.field-meta.xml
<CustomField>
    <fullName>Validation_Special_Chars__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Validation: No Special Characters</label>
    <type>Checkbox</type>
</CustomField>