force-app/main/default/objects/Field_Meta_Data__c/validationRules/Input_table_mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>Input_table_mandatory</fullName>
    <active>true</active>
    <errorConditionFormula>if ( ISPICKVAL( Type__c , &apos;inputtable&apos;) &amp;&amp;  (ISBLANK(Target_Fields_For_Input_Table__c) || ISBLANK( input_table_field_types__c ) || ISBLANK( input_table_cols__c ) || ISBLANK(Parent_Object_Field_for_Input_Table__c) ) ,true,false)</errorConditionFormula>
    <errorMessage>If the Type is inputtable the following fields are mandatory [Columns for Input Table, Field Types for Input Table, Parent Object for Input Table, Target Fields For Input Table]</errorMessage>
</ValidationRule>